; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_repair_shards.c_GetFirstShardId.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/master/extr_master_repair_shards.c_GetFirstShardId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetFirstShardId(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32* @LoadShardList(i32 %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @linitial(i32* %7)
  %9 = inttoptr i64 %8 to i32*
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}

declare dso_local i32* @LoadShardList(i32) #1

declare dso_local i64 @linitial(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
